# neural-decoding-RSNN-reproduce

./: .gitignore  README.md  pyproject.toml  run.sh  setup.sh
config/: defaults.yaml  evaluate.yaml
config/datasets/: data.yaml  data.yml
config/datasets/filenames/: filenames.yaml
config/datasets/pretrain_filenames/: all-filenames.yaml
config/initialiazer/: initializer.yaml
config/model/: model.yaml
config/training/: training.yaml
data/config/: dataloader.py
data/neurobench/: dataloader.py  ras_dataset.py
efficient-rsnn-bmi/: main.py
efficient_rsnn_bmi/: evaluate.py  main.py
efficient_rsnn_bmi/base/: stork_benchmark.py  workload_metrics.py
efficient_rsnn_bmi/core/: activation.py  dataloader.py  evaluate.py  initializers.py  loss.py  model.py  optimizer.py  pruning.py  readout.py  regularization.py  scheduler.py  train.py
efficient_rsnn_bmi/experiments/models/rsnn/: rsnn.py
efficient_rsnn_bmi/neurobench/: result_handler.py
efficient_rsnn_bmi/neurobench/metrics/: activation_sparsity.py  r2.py  syn_ops.py
efficient_rsnn_bmi/neurobench/wrappers/: stork_wrapper.py
efficient_rsnn_bmi/utils/: helper.py  logger.py  plotting.py
notebooks/: evaluation_experiment.ipynb  evaluation_experiment.py  experiment.ipynb
notebooks/temp_model/indy03/: baselineRSNN-True.pth
notebooks/temp_model/loco03/: baselineRSNN-True.pth
src/: main.py
