[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "efficient-rsnn-bmi"
dynamic = ["version"]
dependencies = [
    "numpy",
    "torch",
    "lightning",
    "omegaconf",
    "h5py",
    "hydra-core",
    "neurobench",
    "colorlog",
    "seaborn",
    "stork @ git+https://github.com/fmi-basel/stork.git@40c68fe",
    "randman @ git+https://github.com/fzenke/randman",
]
requires-python = ">=3.10"
authors = [
    {name = "Wilson Tansil", email = "wilsontansil@gmail.com"}
]
maintainers = [
    {name = "Wilson Tansil", email = "wilsontansil@gmail.com"}
]
description = "This repository focuses on optimizing Recurrent Spiking Neural Networks (RSNNs) for Brain-Machine Interfaces (BMI)."
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Documentation = "https://github.com/Tansil011019/efficient-rsnn-bmi.git"
Issues = "https://github.com/Tansil011019/efficient-rsnn-bmi.git/issues"

[tool.hatch.version]
path = "efficient_rsnn_bmi/__version__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/"]